Realty/metadata/objects/PropertyBroker__c.object
<CustomObject>
    <fields>
        <fullName>Broker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Broker</label>
        <referenceTo>Broker__c</referenceTo>
        <relationshipName>PropertyBrokers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipName>PropertyBrokers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Property Broker</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PropertyBroker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Property Brokers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>